--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "progress-steps",
-  "version": "1.0.0",
-  "description": "progress-steps",
+  "name": "react-minimal-progress-steps",
+  "version": "1.0.1",
+  "description": "react-minimal-progress-steps",
   "author": "alithecodeguy",
   "license": "MIT",
-  "repository": "alithecodeguy/progress-steps",
+  "repository": "alithecodeguy/react-minimal-progress-steps",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
